--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,1 +1,11 @@
-<h1>From the homepage</h1>
+<div class="jumbotron">
+  <h2>
+    Hello World
+  </h2>
+  <p>
+    This is a template with some information
+  </p>
+  <p>
+    <a class="btn btn-primary btn-large" href="#"></a>
+  </p>
+</div>
