Added new post button to nav bar

--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -6,6 +6,6 @@
     This is a template with some information
   </p>
   <p>
-    <a class="btn btn-primary btn-large" href="#"></a>
+    <a class="btn btn-primary btn-large" href="#">Learn More</a>
   </p>
 </div>
