--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,11 +1,5 @@
-<div class="jumbotron">
-  <h2>
-    Hello World
-  </h2>
-  <p>
-    This is a template with some information
-  </p>
-  <p>
-    <a class="btn btn-primary btn-large" href="#">Learn More</a>
-  </p>
-</div>
+<% if admin_types.include?(current_user.try(:type)) %>
+  <%= render 'admin' %>
+<% else %>
+  <%= render 'employee' %>
+<% end %>
